--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -22,6 +22,6 @@ jobs:
         uses: EndBug/add-and-commit@v4
         with:
           message: "chore: update sponsors.svg"
-          add: "sponsors.svg"
+          add: "sponsors.*"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
