--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Update sponsors.svg
-        run: npx sponsors-svg
+        run: npx sponsors-svg -w 800 && npx sponsors-svg -w 1300 -o sponsors.wide.svg
         env:
           SPONSORS_TOKEN: ${{ secrets.SPONSORS_TOKEN }}
           SPONSORS_LOGIN: antfu
