--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -13,11 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Update sponsors.svg
-        run: npx sponsors-svg -w 800 && npx sponsors-svg -w 1300 -o sponsors.wide.svg
+      - name: Update sponsors
+        run: npx sponsorkit -w 800 . && npx sponsorkit -w 1300 --name sponsors.wide .
         env:
-          SPONSORS_TOKEN: ${{ secrets.SPONSORS_TOKEN }}
-          SPONSORS_LOGIN: antfu
+          SPONSORKIT_TOKEN: ${{ secrets.SPONSORS_TOKEN }}
+          SPONSORKIT_LOGIN: antfu
 
       - name: Commit
         uses: EndBug/add-and-commit@v4
