--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Update sponsors
         run: npx sponsorkit -w 800 --dir . && npx sponsorkit -w 1300 --name sponsors.wide --dir .
         env:
-          SPONSORKIT_TOKEN: ${{ secrets.SPONSORS_TOKEN }}
-          SPONSORKIT_LOGIN: antfu
+          SPONSORKIT_GITHUB_TOKEN: ${{ secrets.SPONSORS_TOKEN }}
+          SPONSORKIT_GITHUB_LOGIN: antfu
 
       - name: Commit
         uses: EndBug/add-and-commit@v4
