--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -13,8 +13,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16.x
+
+      - run: npx pnpm i
+
       - name: Update sponsors
-        run: npx sponsorkit -w 800 --dir . && npx sponsorkit -w 1300 --name sponsors.wide --dir .
+        run: npm run build
         env:
           SPONSORKIT_GITHUB_TOKEN: ${{ secrets.SPONSORS_TOKEN }}
           SPONSORKIT_GITHUB_LOGIN: antfu
