--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set node
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: lts/*
 
       - run: npx pnpm i
 
