--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - uses: pnpm/action-setup@v3
+
       - name: Set node
         uses: actions/setup-node@v4
         with:
