--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "type": "module",
+  "packageManager": "pnpm@9.0.6",
   "scripts": {
     "build": "sponsorkit"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
-    "sponsorkit": "^0.11.0"
+    "sponsorkit": "^0.11.2"
   }
 }
