--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           node-version: lts/*
 
-      - run: npx pnpm i
+      - run: corepack enable && pnpm i
 
       - name: Update sponsors
         run: npm run build
