--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "type": "module",
-  "packageManager": "pnpm@9.12.3",
+  "packageManager": "pnpm@10.4.1",
   "scripts": {
     "build": "sponsorkit"
   },
   "devDependencies": {
-    "@types/node": "^22.9.0",
-    "sponsorkit": "^0.16.0"
+    "@types/node": "^22.13.4",
+    "sponsorkit": "^16.3.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild",
+      "sharp"
+    ]
   }
 }
